--- a/AngryGourdDemo/AngryGourdDemo.csproj
+++ b/AngryGourdDemo/AngryGourdDemo.csproj
@@ -106,6 +106,21 @@
     <Content Include="Assets\Square71x71Logo.scale-240.png" />
     <Content Include="Assets\StoreLogo.scale-240.png" />
     <Content Include="Assets\WideLogo.scale-240.png" />
+    <Content Include="Content\Backgrounds\Background1.png" />
+    <Content Include="Content\Overlays\You_Died.png" />
+    <Content Include="Content\Overlays\You_Lose.png" />
+    <Content Include="Content\Overlays\You_Win.png" />
+    <Content Include="Content\Sounds\Exit_Reached.wav" />
+    <Content Include="Content\Sounds\Explosion.wav" />
+    <Content Include="Content\Sounds\Gourd_Angry.wav" />
+    <Content Include="Content\Sounds\Hero_Killed.wav" />
+    <Content Include="Content\Sounds\Music.wma" />
+    <Content Include="Content\Sprites\Explosion_Spritesheet.png" />
+    <Content Include="Content\Sprites\Gourd.png" />
+    <Content Include="Content\Sprites\Health_Icon.png" />
+    <Content Include="Content\Sprites\Hero_Idle.png" />
+    <Content Include="Content\Sprites\Hero_Run_Spritesheet.png" />
+    <Content Include="Content\Sprites\Rock.png" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
@@ -130,6 +145,9 @@
     <Reference Include="MonoGame.Framework">
       <HintPath>$(MSBuildProgramFiles32)\MonoGame\v3.0\Assemblies\WindowsPhone81\MonoGame.Framework.dll</HintPath>
     </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Content\Fonts\Hud.spritefont" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\WindowsXaml\v$(VisualStudioVersion)\Microsoft.Windows.UI.Xaml.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
