--- a/AngryGourdDemo/AngryGourdDemo.csproj
+++ b/AngryGourdDemo/AngryGourdDemo.csproj
@@ -88,11 +88,14 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Game1.cs" />
+    <Compile Include="AngryGourdGame.cs" />
     <Compile Include="GamePage.xaml.cs">
       <DependentUpon>GamePage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="GObject2D.cs" />
+    <Compile Include="GSprite.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RenderContainer.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -114,6 +117,7 @@
     <Content Include="Content\Sounds\Explosion.wav" />
     <Content Include="Content\Sounds\Gourd_Angry.wav" />
     <Content Include="Content\Sounds\Hero_Killed.wav" />
+    <Content Include="Content\Sounds\Music.wav" />
     <Content Include="Content\Sprites\Explosion_Spritesheet.png" />
     <Content Include="Content\Sprites\Gourd.png" />
     <Content Include="Content\Sprites\Health_Icon.png" />
