--- a/AngryGourdDemo/AngryGourdDemo.csproj
+++ b/AngryGourdDemo/AngryGourdDemo.csproj
@@ -94,6 +94,7 @@
     </Compile>
     <Compile Include="GObject2D.cs" />
     <Compile Include="GSprite.cs" />
+    <Compile Include="Hero.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RenderContainer.cs" />
   </ItemGroup>
