Add a class for handling spritesheets and animations and then Update the game class

--- a/AngryGourdDemo/AngryGourdDemo.csproj
+++ b/AngryGourdDemo/AngryGourdDemo.csproj
@@ -92,6 +92,7 @@
     <Compile Include="GamePage.xaml.cs">
       <DependentUpon>GamePage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="GAnimatedSprite.cs" />
     <Compile Include="GObject2D.cs" />
     <Compile Include="GSprite.cs" />
     <Compile Include="Hero.cs" />
