Show Explosion when rock touches hero

--- a/AngryGourdDemo/AngryGourdDemo.csproj
+++ b/AngryGourdDemo/AngryGourdDemo.csproj
@@ -124,6 +124,7 @@
     <Content Include="Content\Sounds\Gourd_Angry.wav" />
     <Content Include="Content\Sounds\Hero_Killed.wav" />
     <Content Include="Content\Sounds\Music.wav" />
+    <Content Include="Content\Sprites\Explosion_Large_Spritesheet.png" />
     <Content Include="Content\Sprites\Explosion_Spritesheet.png" />
     <Content Include="Content\Sprites\Gourd.png" />
     <Content Include="Content\Sprites\Health_Icon.png" />
